...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_event_poster"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:src="@drawable/placeholder" />

        <Button
            android:id="@+id/button_select_picture"
...
                android:fontFamily="@font/frank_ruhl_libre"
                android:text="Event Title:"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frank_ruhl_libre"
                android:inputType="text" />
        </LinearLayout>

...
                android:fontFamily="@font/frank_ruhl_libre"
                android:text="Date:"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
...
                android:fontFamily="@font/frank_ruhl_libre"
                android:text="Time:"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/frank_ruhl_libre"
                android:hint="HH:mm"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edittext_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:fontFamily="@font/frank_ruhl_libre"
            android:gravity="top"
            android:hint="Description"
...
            android:fontFamily="@font/frank_ruhl_libre"
            android:text="Capacity:"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edittext_event_capacity"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/frank_ruhl_libre"
            android:inputType="number" />
    </LinearLayout>

...
                android:fontFamily="@font/frank_ruhl_libre"
                android:text="Milestone:"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_event_milestone"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frank_ruhl_libre"
                android:inputType="number"/>
            <TextView
            android:id="@+id/attendee_text"
...
                android:fontFamily="@font/frank_ruhl_libre"
                android:text="Location:"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frank_ruhl_libre"
                android:inputType="text" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_generate_checkin_qr"
            android:layout_width="150dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/event_button_solid"
            android:checked="true"
            android:fontFamily="@font/frank_ruhl_libre"
            android:text="@string/check_in_qr_code"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/button_generate_eventpage_qr"
            android:layout_width="150dp"
            android:layout_marginStart = "5dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:background="@drawable/event_button_solid"
            android:fontFamily="@font/frank_ruhl_libre"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:text="EVENT QR CODE" />
    </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_marginTop = "25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@drawable/event_button_outlined"
            android:text="@string/next" />
...
