...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </LinearLayout>

    <ListView
        android:id="@+id/event_organizer_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:listitem="@layout/activity_event_adapter" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/event_scan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
...
