...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back_arrow_eventdetails"
                android:layout_width="27dp"
                android:layout_height="29dp"
                android:src="@drawable/back_arrow" />

            <ImageView
                android:id="@+id/image_event_poster"
...
                android:layout_marginTop="5dp"
                android:fontFamily="@font/frank_ruhl_libre"
                android:text="Event date and time"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/Event_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/frank_ruhl_libre"
                android:text="Event Title"
...
