...
            app:background="@color/dark_green"
            app:backgroundTint="@color/dark_green"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/event_qr_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:fontFamily="@font/belleza"
            android:text="Event QR Code"
...
